# radar-processor

./: .gitignore  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  quickstart.sh  requirements.txt  setup.py
docs/: API_REFERENCE.es.md  FILTERS.es.md  GEOTIFF_GENERATION.md  LOGGING.md  PROJECTION_INVESTIGATION.md  README.es.md
examples/: advanced_usage.py  all_options.py  basic_usage.py  batch_processing.py  cog_configuration.py  fields_explained.py  filter_examples.py  geotiff_generation_example.py  products_explained.py  radar_grid_building_example.py  radar_grid_examples_with_visualization.ipynb  radar_grid_interpolation_example.py  radar_grid_products_example.py
src/radar_cog_processor/: cache.py  colormaps.py  constants.py  processor.py  processor_legacy.py  utils.py
src/radar_grid/: __init__.py  compute.py  filters.py  geometry.py  geotiff.py  interpolate.py  mpl_visualization.py  products.py  utils.py
src/radar_processor/: __init__.py  colormaps.py  constants.py  processor.py  processor_legacy.py
src/radar_processor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_cache.py  test_cog_overviews.py  test_colormaps.py  test_geotiff_generation.py  test_grid_filters.py  test_masked_array_edge_cases.py  test_performance.py  test_processor_phases.py  test_projection_verification.py  test_radar_grid_filters.py  test_radar_grid_geometry.py  test_radar_grid_interpolate.py  test_radar_grid_products.py  test_utils.py  validate_geotiff_module.py
